Revision history for Bread-Board

{{$NEXT}}
  [ API CHANGES ]

  [ BUG FIXES ]
  - fixed Bread::Board::Dumper to dump parameterized containers -
       previously it would just ignore them entirely (#56, Dave Rolsky)
  - Moo classes were losing their method modifiers because
    of bad interaction with Class::MOP::class_of(). (GH#61)

  [ DOCUMENTATION ]

  [ ENHANCEMENTS ]
    - Bread::Board::Dumper now sorts services and sub containers - previously
      these came out in a random order each time (#56, Dave Rolsky)
    - allow a service or literal to be undefined. (#54, Dave Rolsky)

  [ NEW FEATURES ]

  [ STATISTICS ]

0.34 2016-03-28
  - Add test messages to tests which did not have them, (#50, Alex
    Balhatchet)

  [ DOCUMENTATION ]
    - add missing module abstracts. (GH#49, Alex Balhatchet, GH#16,
      Sterling Hanenkamp)

  [ ENHANCEMENTS ]
    - SetterInjection can now accept any constructor. (#43, dakkar)

  [ STATISTICS ]
    - code churn: 37 files changed, 462 insertions(+), 395 deletions(-)

0.33 2015-04-26
  - add 'literal' keyword (Yanick Champoux, #31)
  - added documentation for most of the classes (dakkar, sponsored by
    Net-a-Porter.com)

  [ STATISTICS ]
    - code churn: 35 files changed, 1016 insertions(+), 375 deletions(-)

0.32 2014-06-03
  - fixes to arrayref dependencies (dakkar, #35)

0.31 2014-05-08
  - allow specifying dependency values as arrayrefs, which will resolve to
    an arrayref containing the resolved service values (dakkar, #34)

0.30 2014-02-02
  - fix deprecated use of Class::MOP::load_class (Caleb Cushing, #33)

0.29 2013-11-21
  - Fix deprecated enum syntax

0.28 2013-08-30
  - Allow overriding of services and containers. This is useful when using
    the common pattern of "sub BUILD { my $self = shift; container $self =>
    as { ... } }" since the BUILD method in a subclass can modify existing
    services and containers that were defined in a superclass, rather than